# tetrika-test

./: .gitignore  README.md  pyproject.toml
task1/solution/: functions.py  strict_decorator.py
task1/solution/tests/: test_strict_manual.py  test_strict_pytest.py
task2/solution/: beasts.csv  wiki_parsing.py
task2/solution/tests/: test.html  test_parsing_pytest.py
task2/test/: test_parsing_pytest.py
task3/solution/: appearance.py
task3/solution/tests/: test_appearance_manual.py  test_appearance_pytest.py
